--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       }
       /* Universal Focus States */
       *:focus-visible {
-        outline: 2px solid #10b981;
+        outline: 2px solid #00629D;
         outline-offset: 2px;
       }
       [dir="rtl"] .font-arabic {
@@ -93,7 +93,7 @@
         transform: translateY(-4px);
       }
       .chart-container .recharts-tooltip-cursor {
-        fill: rgba(16, 185, 129, 0.05) !important;
+        fill: rgba(0, 98, 157, 0.08) !important;
       }
     </style>
   <script type="importmap">
